[package]
name = "bca-protocol-client"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
shared = { path = "../shared/" }

[dependencies.crossterm]
version = "0.29"
features = ["event-stream", "serde", "osc52"] 

[dependencies.uuid]
version = "1.17.0"
# Lets you generate random UUIDs
features = [
    "v4",
]